removed dark mode due to issues

--- a/responsive-portfolio/style.css
+++ b/responsive-portfolio/style.css
@@ -281,102 +281,3 @@ form button {
     background-size: cover;
     background-position: center;
 }
-
-/* Dark mode style */
-@media (prefers-color-scheme: dark) {
-    body {
-        background-color: #0e1220;
-        color: #eaeaea;
-    }
-    
-    .hero {
-        background-image: url('images/dark.jpg');
-        background-size: cover;
-        background-attachment: fixed;
-    }
-    
-    .skills {
-        background-image: url('images/dark.jpg');
-        background-size: cover;
-        background-attachment: fixed;
-    }
-    
-    .projects {
-        background-image: url('images/dark.jpg');
-        background-size: cover;
-        background-attachment: fixed;
-    }
-    
-    .contact-wrapper {
-        background-image: url('images/dark.jpg');
-        background-size: cover;
-        background-attachment: fixed;
-    }
-    
-    h1, h2, h3, h4, p {
-        color: #eaeaea;
-    }
-    
-    h2, h3, h4 {
-        font-weight: bold;
-    }
-
-    .skills-container, .projects-container, .contact-info {
-        background-color: #40213300;
-        border-radius: 10px;
-        padding: 20px;
-    }
-    
-    .skills li, .projects .project-container, .contact input, .contact textarea, .contact button {
-        background-color: #693a4f;
-        border-color: #cc5981;
-        color: #eaeaea;
-        font-weight: bold;
-        padding: 1px;
-        border: 2px solid transparent;
-        border-radius: 0.375rem;
-        transition: all 0.3s ease;
-        overflow: visible;
-    }
-    
-    /* Hover effects */
-    .skills li:hover, .projects .project-container:hover {
-        background-color: #ac8ec2;
-    }
-    
-    /* Contact form input/textarea focus effect */
-    .contact input:focus, .contact textarea:focus {
-        border-color: #cc5981;
-        box-shadow: 0 0 0 2px #ac8ec2;
-    }
-    
-    /* Button hover effect */
-    .contact button:hover {
-        background-color: #9d4f72;
-    }
-    
-    /* Dark Mode Toggle Styles */
-    input[type="checkbox"]:checked + label {
-        background-color: #cc5981;
-    }
-    
-    /* Dark Mode button */
-    input[type="checkbox"]:checked + label .moon {
-        background-color: #eaeaea;
-    }
-    
-    /* Header Section */
-    header {
-        color: #eaeaea;
-    }
-    
-    /* Links */
-    a {
-        color: #ac8ec2;
-        text-decoration: none;
-    }
-    
-    a:hover {
-        color: #cc5981;
-    }
-}
